--- a/src/pages/confirmation.envoi.formulaire/confirmation.envoi.formulaire.scss
+++ b/src/pages/confirmation.envoi.formulaire/confirmation.envoi.formulaire.scss
@@ -10,6 +10,10 @@
   src: url(../../../public/fonts/ArchivoBlack-Regular.ttf);
 }
 
+body{
+	overflow: hidden;
+}
+
 .confirmationFormulaire{
 	display: flex;
 	flex-wrap: wrap;
