--- a/src/pages/page.formulaire.entreprise/page.formulaire.entreprise.scss
+++ b/src/pages/page.formulaire.entreprise/page.formulaire.entreprise.scss
@@ -11,6 +11,11 @@
   src: url(../../../public/fonts/ArchivoBlack-Regular.ttf);
 }
 
+body{
+	overflow: hidden;
+}
+
+
 .introFormulaire {
   margin-top: 80px;
   padding-bottom: 80px;
