--- a/src/pages/page.formulaire.prive/page.formulaire.prive.scss
+++ b/src/pages/page.formulaire.prive/page.formulaire.prive.scss
@@ -11,6 +11,10 @@
   src: url(../../../public/fonts/ArchivoBlack-Regular.ttf);
 }
 
+body{
+	overflow: hidden;
+}
+
 .introFormulaire {
   margin-top: 80px;
   padding-bottom: 80px;
