--- a/src/pages/productions.vr/productions.vr.scss
+++ b/src/pages/productions.vr/productions.vr.scss
@@ -1,6 +1,10 @@
 @import "../../utils/style/libs/mixins.scss";
 @import "../../../src/utils/style/libs/variable.scss";
 
+body{
+	overflow: hidden;
+}
+
 .container{
 	height: fit-content;
 	background-color: rgb(255, 255, 255);
